--- a/app/src/main/res/layout/login_ui.xml
+++ b/app/src/main/res/layout/login_ui.xml
@@ -1,68 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:padding="10sp"
+    tools:context=".LoginUIActivity">
 
-    <RelativeLayout
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10sp"
+        android:fontFamily="@font/droid_serif"
+        android:text="Log In"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:id="@+id/label_login" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_centerInParent="true"
+        app:cardBackgroundColor="#ffffff"
+        app:cardCornerRadius="8sp"
+        app:cardElevation="6sp"
+        app:cardUseCompatPadding="true">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
-            android:textSize="30sp"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginLeft="50sp"
-            android:id="@+id/label_login"
-            android:layout_marginTop="20sp"/>
+            android:layout_margin="8sp"
+            android:orientation="vertical">
 
         <TextView
             android:id="@+id/label_email"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Email"
-            android:textSize="25sp"
-            android:layout_marginTop="20sp"
-            android:layout_below="@id/label_login"/>
+            android:fontFamily="@font/droid_serif"
+            android:text="Email Address"
+            android:layout_marginTop="5sp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/edit_email"
-            android:layout_width="200sp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="32sp"
+            android:layout_marginTop="3sp"
+            android:background="@drawable/edit_box_corner"
             android:inputType="textEmailAddress"
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="20sp"
-            android:hint="Enter your email here"
-            android:layout_below="@id/label_email"/>
+            android:textColor="@android:color/black"
+            android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/label_password"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
             android:text="Password"
-            android:layout_marginTop="20sp"
-            android:layout_below="@id/edit_email"/>
+            android:layout_marginTop="10sp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/edit_password"
-            android:layout_width="200sp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="20sp"
-            android:hint="Enter password here"
+            android:layout_width="match_parent"
+            android:layout_height="32sp"
+            android:layout_marginTop="3sp"
+            android:background="@drawable/edit_box_corner"
             android:inputType="textPassword"
-            android:layout_below="@id/label_password"/>
+            android:fontFamily="@font/droid_serif"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"/>
 
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
-            android:layout_below="@id/edit_password"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="14sp"
             android:id="@+id/radio_group">
 
             <RadioButton
@@ -70,63 +91,70 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/choice_recycler"
                 android:text="Recycler"
-                android:layout_marginTop="10sp"/>
+                android:textColor="@color/colorPrimary"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginRight="3sp"
+                android:fontFamily="@font/droid_serif"/>
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/choice_user"
                 android:text="User"
-                android:layout_marginTop="10sp"/>
+                android:layout_marginLeft="3sp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/droid_serif"/>
 
         </RadioGroup>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="34sp"
             android:id="@+id/button_login"
-            android:layout_marginTop="25sp"
+            android:layout_marginTop="18sp"
+            android:textColor="@android:color/white"
             android:text="Login"
-            android:textColor="@color/colorPrimary"
-            android:layout_below="@id/radio_group"
-            android:layout_marginStart="50sp"/>
+            android:textAllCaps="false"
+            android:fontFamily="@font/droid_serif"
+            android:textStyle="bold"
+            android:background="@drawable/button_selector"
+            android:textSize="18sp"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/button_login">
+            android:orientation="horizontal"
+            android:layout_below="@id/cardViewLogin"
+            android:layout_marginLeft="8sp"
+            android:layout_marginRight="8sp"
+            android:layout_marginTop="10sp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/label_new_user"
                 android:text="New user?"
-                android:layout_marginTop="20sp"
-                android:textSize="15sp"/>
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/droid_serif"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
                 android:id="@+id/click_new_user"
-                android:textColor="#0000FF"
-                android:text="@string/register_link"
-                android:clickable="true"
-                android:onClick="click"
-                android:textSize="15sp"
-                android:layout_marginLeft="10sp"/>
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"
+                android:fontFamily="@font/droid_serif"/>
         </LinearLayout>
 
     </RelativeLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
-
-</android.support.constraint.ConstraintLayout>
