--- a/app/src/main/res/layout/register_ui.xml
+++ b/app/src/main/res/layout/register_ui.xml
@@ -1,128 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:padding="8sp"
+    tools:context=".RegisterUIActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Register"
+        android:layout_marginTop="4sp"
+        android:textSize="24sp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:fontFamily="@font/droid_serif"
+        android:id="@+id/label_register" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#ffffff"
+        android:layout_below="@id/label_register"
+        android:layout_centerInParent="true"
+        app:cardCornerRadius="8sp"
+        android:layout_marginTop="10sp"
+        app:cardElevation="6sp"
+        app:cardUseCompatPadding="true">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="200sp">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Register"
-                android:textSize="30sp"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginLeft="50sp"
-                android:id="@+id/label_register"
-                android:layout_marginTop="20sp"/>
+            android:padding="8sp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/label_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="Name"
-                android:textSize="25sp"
-                android:layout_marginTop="20sp"
-                android:layout_below="@id/label_register"/>
+                android:textSize="16sp"
+                android:textColor="@android:color/black"/>
 
             <EditText
                 android:id="@+id/edit_name"
-                android:layout_width="200sp"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:layout_marginTop="20sp"
-                android:layout_marginLeft="20sp"
-                android:hint="Enter your name here"
-                android:layout_below="@id/label_name"/>
+                android:layout_width="match_parent"
+                android:layout_height="32sp"
+                android:layout_marginTop="3sp"
+                android:background="@drawable/edit_box_corner"
+                android:inputType="textPersonName"
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"/>
 
             <TextView
                 android:id="@+id/label_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
-                android:textSize="25sp"
-                android:layout_marginTop="20sp"
-                android:layout_below="@id/edit_name"/>
+                android:textStyle="bold"
+                android:layout_marginTop="10sp"
+                android:text="Email Address"
+                android:textSize="16sp"
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"/>
 
             <EditText
                 android:id="@+id/edit_email"
-                android:layout_width="200sp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="32sp"
+                android:layout_marginTop="3sp"
+                android:background="@drawable/edit_box_corner"
                 android:inputType="textEmailAddress"
-                android:layout_marginTop="20sp"
-                android:layout_marginLeft="20sp"
-                android:hint="Enter your email here"
-                android:layout_below="@id/label_email"/>
+                android:textColor="@android:color/black"
+                android:fontFamily="@font/droid_serif"
+                android:textSize="15sp"/>
 
             <TextView
                 android:id="@+id/label_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Phone number"
-                android:textSize="25sp"
-                android:layout_marginTop="20sp"
-                android:layout_below="@id/edit_email"/>
+                android:textStyle="bold"
+                android:layout_marginTop="10sp"
+                android:text="Phone Number"
+                android:textSize="16sp"
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"/>
 
             <EditText
                 android:id="@+id/edit_phone"
-                android:layout_width="200sp"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:layout_marginTop="20sp"
-                android:layout_marginLeft="20sp"
-                android:hint="Enter your phone number here"
-                android:layout_below="@id/label_phone"/>
+                android:layout_width="match_parent"
+                android:layout_height="32sp"
+                android:layout_marginTop="3sp"
+                android:background="@drawable/edit_box_corner"
+                android:inputType="phone"
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/label_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10sp"
                 android:text="Password"
-                android:layout_marginTop="20sp"
-                android:layout_below="@id/edit_phone"/>
+                android:textSize="16sp"
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"/>
 
             <EditText
                 android:id="@+id/edit_password"
-                android:layout_width="200sp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:layout_marginLeft="20sp"
-                android:hint="Enter password here"
+                android:layout_width="match_parent"
+                android:layout_height="32sp"
+                android:layout_marginTop="3sp"
+                android:background="@drawable/edit_box_corner"
                 android:inputType="textPassword"
-                android:layout_below="@id/label_password"/>
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"/>
 
             <TextView
                 android:id="@+id/label_confirm_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10sp"
                 android:text="Confirm Password"
-                android:layout_marginTop="20sp"
-                android:layout_below="@id/edit_password"/>
+                android:textSize="16sp"
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"/>
 
             <EditText
                 android:id="@+id/edit_confirm_password"
-                android:layout_width="200sp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:layout_marginLeft="20sp"
-                android:hint="Re-Enter password here"
+                android:layout_width="match_parent"
+                android:layout_height="32sp"
+                android:layout_marginTop="3sp"
+                android:background="@drawable/edit_box_corner"
                 android:inputType="textPassword"
-                android:layout_below="@id/label_confirm_password"/>
+                android:fontFamily="@font/droid_serif"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"/>
 
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:layout_below="@id/edit_confirm_password"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="14sp"
                 android:id="@+id/radio_group">
 
                 <RadioButton
@@ -130,27 +163,40 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/choice_recycler"
                     android:text="Recycler"
-                    android:layout_marginTop="10sp"/>
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginRight="3sp"
+                    android:fontFamily="@font/droid_serif"/>
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/choice_user"
                     android:text="User"
-                    android:layout_marginTop="10sp"/>
+                    android:layout_marginLeft="3sp"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/droid_serif"/>
 
             </RadioGroup>
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="34sp"
                 android:id="@+id/button_register"
-                android:layout_marginTop="25sp"
+                android:layout_marginTop="18sp"
+                android:textColor="@android:color/white"
                 android:text="Register"
-                android:textColor="@color/colorPrimary"
-                android:layout_below="@id/radio_group"
-                android:layout_marginStart="50sp"/>
-        </RelativeLayout>
+                android:textAllCaps="false"
+                android:fontFamily="@font/droid_serif"
+                android:textStyle="bold"
+                android:background="@drawable/button_selector"
+                android:textSize="18sp"
+                android:layout_marginBottom="10sp"/>
+        </LinearLayout>
 
     </ScrollView>
-</android.support.constraint.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
