--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/navigation_login"
         android:icon="@drawable/ic_account_circle"
-        android:title="@string/title_login" />
+        android:title="Login" />
 
     <item
         android:id="@+id/navigation_admin"
         android:icon="@drawable/ic_admin"
-        android:title="@string/title_admin" />
+        android:title="Admin" />
 
 </menu>
