--- a/app/src/main/res/drawable/edit_box_corner.xml
+++ b/app/src/main/res/drawable/edit_box_corner.xml
@@ -6,17 +6,17 @@
     <solid android:color="#ffffff"></solid>
 
     <stroke
-        android:width="2sp"
+        android:width="@dimen/_2sdp"
         android:color="@color/colorPrimary"
-        android:dashWidth="3sp"/>
+        android:dashWidth="@dimen/_3sdp"/>
 
     <!-- Here is the corner radius -->
-    <corners android:radius="5sp"></corners>
+    <corners android:radius="@dimen/_5sdp"></corners>
 
     <padding
-        android:bottom="8sp"
-        android:left="8sp"
-        android:right="8sp"
-        android:top="8sp"/>
+        android:bottom="@dimen/_8sdp"
+        android:left="@dimen/_8sdp"
+        android:right="@dimen/_8sdp"
+        android:top="@dimen/_8sdp"/>
 
 </shape>
