--- a/app/src/main/res/layout/nav_header_slide_menu.xml
+++ b/app/src/main/res/layout/nav_header_slide_menu.xml
@@ -20,6 +20,15 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
+    <!--<TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:text=""
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:fontFamily="@font/droid_serif"/>-->
+
     <TextView
         android:id="@+id/textView_header_email"
         android:layout_width="wrap_content"
