Landing pages updated

--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -32,7 +32,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
-                android:text="XYZ"
+                android:text="Chintan Patel"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/black"
                 android:fontFamily="@font/droid_serif"
@@ -60,7 +60,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
-                android:text="nihir@gmail.com"
+                android:text="chintan.patel@dal.com"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/black"
                 android:fontFamily="@font/droid_serif"
