Show post and add bid added

--- a/app/src/main/res/layout/fragment_add_bid.xml
+++ b/app/src/main/res/layout/fragment_add_bid.xml
@@ -30,46 +30,19 @@
                         android:id="@+id/image_add_post_1"
                         android:layout_width="@dimen/_100sdp"
                         android:layout_height="@dimen/_100sdp"
-                        android:src="@drawable/ic_photo_camera"
+                        android:src="@drawable/iphone"
                         android:scaleType="fitXY"
                         android:layout_centerHorizontal="true"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Add Picture"
+                        android:text="Image 1"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:fontFamily="@font/droid_serif"
                         android:textStyle="bold"
                         android:layout_below="@id/image_add_post_1"
-                        android:layout_centerHorizontal="true"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-
-                <ImageView
-                    android:id="@+id/image_add_post_2"
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_100sdp"
-                    android:src="@drawable/ic_photo_camera"
-                    android:layout_centerHorizontal="true"
-                    android:scaleType="fitXY" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Add Picture"
-                        android:textSize="16sp"
-                        android:textColor="@android:color/black"
-                        android:fontFamily="@font/droid_serif"
-                        android:textStyle="bold"
-                        android:layout_below="@id/image_add_post_2"
                         android:layout_centerHorizontal="true"/>
 
                 </RelativeLayout>
@@ -92,7 +65,7 @@
                     android:fontFamily="@font/droid_serif"
                     android:textStyle="bold" />
 
-                <EditText
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
@@ -101,7 +74,7 @@
                     android:gravity="start"
                     android:minLines="3"
                     android:maxLines="4"
-                    android:hint=""
+                    android:text="Iphone"
                     android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
@@ -123,15 +96,14 @@
                     android:fontFamily="@font/droid_serif"
                     android:textStyle="bold" />
 
-                <EditText
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:textColor="@android:color/black"
                     android:fontFamily="@font/droid_serif"
                     android:gravity="start"
-                    android:inputType="text"
-                    android:hint="100 kg"
+                    android:text="1"
                     android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
@@ -146,7 +118,38 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Location:"
+                    android:text="Item Location:"
+                    android:textSize="16sp"
+                    android:layout_weight="35"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:gravity="start"
+                    android:text="Halifax"
+                    android:singleLine="true"
+                    android:hint=""
+                    android:background="@drawable/edit_box_corner"
+                    android:layout_weight="65"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_16sdp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Bid amount:"
                     android:textSize="16sp"
                     android:layout_weight="35"
                     android:textColor="@android:color/black"
@@ -154,15 +157,48 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/recycler_bid_amount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:textColor="@android:color/black"
                     android:fontFamily="@font/droid_serif"
+                    android:inputType="number"
                     android:gravity="start"
-                    android:inputType="text"
                     android:singleLine="true"
-                    android:hint=""
+                    android:hint="Add bid amount"
+                    android:background="@drawable/edit_box_corner"
+                    android:layout_weight="65"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_16sdp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Your location:"
+                    android:textSize="16sp"
+                    android:layout_weight="35"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/recycler_location"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:inputType="number"
+                    android:gravity="start"
+                    android:singleLine="true"
+                    android:hint="Add your location"
                     android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
@@ -171,7 +207,7 @@
             <Button
                 android:layout_width="@dimen/_100sdp"
                 android:layout_height="@dimen/_34sdp"
-                android:text="Upload"
+                android:text="Add bid"
                 android:layout_marginTop="@dimen/_40sdp"
                 android:textSize="16sp"
                 android:textAllCaps="false"
