--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="E-Recycling"
         android:textSize="28sp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         android:textStyle="bold"
         android:fontFamily="@font/droid_serif"
         android:layout_centerInParent="true"/>
