--- a/app/src/main/res/layout/list_buy_items.xml
+++ b/app/src/main/res/layout/list_buy_items.xml
@@ -16,7 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/layout_buy_items">
 
             <ImageView
                 android:id="@+id/image_row_recycler_post_product_image"
