--- a/app/src/main/res/layout/content_add_bid.xml
+++ b/app/src/main/res/layout/content_add_bid.xml
@@ -152,7 +152,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Bid amount:"
+                    android:text="Bid amount ($):"
                     android:textSize="16sp"
                     android:layout_weight="35"
                     android:textColor="@android:color/black"
