--- a/app/src/main/res/layout/fragment_show_user_post.xml
+++ b/app/src/main/res/layout/fragment_show_user_post.xml
@@ -76,7 +76,6 @@
                     android:minLines="3"
                     android:maxLines="4"
                     android:text="Iphone"
-                    android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
             </LinearLayout>
@@ -105,7 +104,6 @@
                     android:fontFamily="@font/droid_serif"
                     android:gravity="start"
                     android:text="1"
-                    android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
             </LinearLayout>
@@ -135,7 +133,6 @@
                     android:gravity="start"
                     android:singleLine="true"
                     android:text="Halifax"
-                    android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
             </LinearLayout>
@@ -202,7 +199,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="9024037230"
+                        android:text="902-403-7230"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:fontFamily="@font/droid_serif"
@@ -254,7 +251,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="$50"
+                        android:text="$30"
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
                         android:fontFamily="@font/droid_serif"
