--- a/app/src/main/res/layout/login_ui.xml
+++ b/app/src/main/res/layout/login_ui.xml
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/choice_user"
-                android:text="User"
+                android:text="e-waste owner"
                 android:layout_marginLeft="3sp"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
