--- a/app/src/main/res/layout/content_add_bid.xml
+++ b/app/src/main/res/layout/content_add_bid.xml
@@ -12,7 +12,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusableInTouchMode="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,7 +80,7 @@
                     android:minLines="3"
                     android:maxLines="4"
                     android:text="Iphone"
-                    android:background="@drawable/edit_box_corner"
+
                     android:layout_weight="65"/>
 
             </LinearLayout>
@@ -107,7 +109,6 @@
                     android:fontFamily="@font/droid_serif"
                     android:gravity="start"
                     android:text="1"
-                    android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
             </LinearLayout>
@@ -138,7 +139,6 @@
                     android:text="Halifax"
                     android:singleLine="true"
                     android:hint=""
-                    android:background="@drawable/edit_box_corner"
                     android:layout_weight="65"/>
 
             </LinearLayout>
