--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,7 +62,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/_3sdp"
-                    android:background="@drawable/edit_box_corner"
                     android:textColor="@android:color/black"
                     android:fontFamily="@font/droid_serif"
                     android:textSize="15sp"/>
@@ -82,7 +81,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/_3sdp"
-                    android:text="9024037230"
+                    android:text="902-403-7230"
+                    android:maxLength="12"
                     android:background="@drawable/edit_box_corner"
                     android:inputType="phone"
                     android:fontFamily="@font/droid_serif"
