--- a/app/src/main/res/layout/register_ui.xml
+++ b/app/src/main/res/layout/register_ui.xml
@@ -102,6 +102,7 @@
                 android:layout_marginTop="3sp"
                 android:background="@drawable/edit_box_corner"
                 android:inputType="phone"
+                android:maxLength="12"
                 android:fontFamily="@font/droid_serif"
                 android:textColor="@android:color/black"
                 android:textSize="15sp" />
@@ -173,7 +174,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/choice_user"
-                    android:text="User"
+                    android:text="e-waste owner"
                     android:layout_marginLeft="3sp"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
