--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -153,17 +153,15 @@
                     android:fontFamily="@font/droid_serif"
                     android:textStyle="bold" />
 
-                <EditText
+                <AutoCompleteTextView
+                    android:id="@+id/edit_location"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:textColor="@android:color/black"
                     android:fontFamily="@font/droid_serif"
                     android:gravity="start"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:hint=""
-                    android:background="@drawable/edit_box_corner"
+                    android:hint="Search Location"
                     android:layout_weight="65"/>
 
             </LinearLayout>
