Feature: image upload added

--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -34,7 +34,8 @@
                         android:scaleType="fitXY"
                         android:layout_centerHorizontal="true"/>
 
-                    <TextView
+                    <Button
+                        android:id="@+id/add_picture_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Add Picture"
@@ -61,7 +62,8 @@
                     android:layout_centerHorizontal="true"
                     android:scaleType="fitXY" />
 
-                    <TextView
+                    <Button
+                        android:id="@+id/add_picture_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Add Picture"
