Feature: OnClick events added, landing page updated
Landing page updated to Login.
OnClick event added on all the buttons

--- a/app/src/main/res/layout/content_add_bid.xml
+++ b/app/src/main/res/layout/content_add_bid.xml
@@ -208,6 +208,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/recycler_add_bid_button"
                 android:layout_width="@dimen/_100sdp"
                 android:layout_height="@dimen/_34sdp"
                 android:text="Add bid"
