--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -101,6 +101,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/submit_button"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_34sdp"
             android:text="Submit"
