--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -169,6 +169,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/upload_button"
                 android:layout_width="@dimen/_100sdp"
                 android:layout_height="@dimen/_34sdp"
                 android:text="Upload"
