--- a/app/src/main/res/layout/content_add_bid.xml
+++ b/app/src/main/res/layout/content_add_bid.xml
@@ -152,6 +152,66 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:text="Owner contact:"
+                    android:textSize="16sp"
+                    android:layout_weight="35"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:gravity="start"
+                    android:text="902-403-7230"
+                    android:singleLine="true"
+                    android:hint=""
+                    android:layout_weight="65"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_16sdp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Owner email:"
+                    android:textSize="16sp"
+                    android:layout_weight="35"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/droid_serif"
+                    android:gravity="start"
+                    android:text="chintan.patel@dal.ca"
+                    android:singleLine="true"
+                    android:hint=""
+                    android:layout_weight="65"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_16sdp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:text="Bid amount ($):"
                     android:textSize="16sp"
                     android:layout_weight="35"
